--- a/mylinks.html
+++ b/mylinks.html
@@ -13,7 +13,7 @@
             margin: 0;
             flex-direction: column;
             font-family: Arial, sans-serif;
-            background-image: url('background-image.jpg'); /* Replace with your background image */
+            background-image: url('mainpage.png'); /* Replace with your background image */
             background-size: cover;
             background-position: center;
             color: #fff; /* Text color for captions */
@@ -43,38 +43,38 @@
     <div class="gallery">
         <!-- Photo 1 -->
         <div class="photo">
-            <img src="photo1.jpg" alt="Photo 1">
-            <div class="caption">Caption for Photo 1</div>
+            <img src="InstagramLogo.png" alt="Instagram Logo">
+            <div class="caption">Instagram</div>
         </div>
         <!-- Photo 2 -->
         <div class="photo">
-            <img src="photo2.jpg" alt="Photo 2">
-            <div class="caption">Caption for Photo 2</div>
+            <img src="TwitterLogo.png" alt="Twitter Logo">
+            <div class="caption">Twitter</div>
         </div>
         <!-- Photo 3 -->
         <div class="photo">
-            <img src="photo3.jpg" alt="Photo 3">
-            <div class="caption">Caption for Photo 3</div>
+            <img src="TwitchLogo.png" alt="Twitch Logo">
+            <div class="caption">Twitch</div>
         </div>
         <!-- Photo 4 -->
         <div class="photo">
-            <img src="photo4.jpg" alt="Photo 4">
-            <div class="caption">Caption for Photo 4</div>
+            <img src="YoutubeLogo.png" alt="Youtube Logo">
+            <div class="caption">Youtube</div>
         </div>
         <!-- Photo 5 -->
         <div class="photo">
-            <img src="photo5.jpg" alt="Photo 5">
-            <div class="caption">Caption for Photo 5</div>
+            <img src="TiktokLogo.png" alt="Tiktok Logo">
+            <div class="caption">Tiktok</div>
         </div>
         <!-- Photo 6 -->
         <div class="photo">
-            <img src="photo6.jpg" alt="Photo 6">
-            <div class="caption">Caption for Photo 6</div>
+            <img src="SpotifyLogo.png" alt="Spotify Logo">
+            <div class="caption">Spotify</div>
         </div>
         <!-- Photo 7 -->
         <div class="photo">
-            <img src="photo7.jpg" alt="Photo 7">
-            <div class="caption">Caption for Photo 7</div>
+            <img src="SoundcloudLogo.png" alt="Soundcloud Logo">
+            <div class="caption">Soundcloud</div>
         </div>
     </div>
 </body>
